--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,26 @@ h1 {
   line-height: 28px;
   margin-bottom: 0;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  color: rgb(135, 135, 135);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+}
+
+li:first-letter {
+  text-transform: capitalize;
+}
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
