changed border,& colours

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  color: #878787;
+  color: #a393eb;
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
@@ -20,7 +20,7 @@ li {
   margin: 0;
   padding: 0;
 
-  color: rgb(135, 135, 135);
+  color: #a393eb;
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
@@ -33,15 +33,16 @@ li:first-letter {
   max-width: 600px;
   margin: 30px auto;
   background: linear-gradient(
-    90deg,
-    rgb(115, 242, 252) 0%,
-    rgb(159, 151, 238) 100%
+    89.9deg,
+    rgb(208, 246, 255) 0.1%,
+    rgb(255, 237, 237) 47.9%,
+    rgb(255, 255, 231) 100.2%
   );
 }
 
 .weather-app {
   padding: 20px;
-  border: 1px solid #dadde1;
+  border: 1px solid #a393eb;
   border-radius: 5px;
 }
 
@@ -56,7 +57,7 @@ li:first-letter {
 }
 
 .weather-temperature strong {
-  color: rgb(33, 33, 33);
+  color: #5e63b6;
   font-size: 64px;
   line-height: 1;
   font-weight: 400;
@@ -69,7 +70,7 @@ li:first-letter {
 }
 
 .weather-temperature .active {
-  color: rgb(33, 33, 33);
+  color: #5e63b6;
   cursor: default;
 }
 
